fixed line numbers being inaccurate when wrapping

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -69,6 +69,12 @@ html, body {
   -ms-user-select: none;
   user-select: none;
 }
+pre {
+  padding: 0;
+}
+pre, code {
+	white-space: pre !important;
+}
 
 
 /*marker highlighting*/
@@ -80,7 +86,7 @@ html, body {
   /*padding: 1px;
 
     margin: 1px;*/
-  /*border: 1px dotted grey;*/
+  border: 1px solid rgba(255, 255, 255, 0);
 }
 
 .MOVE {
@@ -89,6 +95,7 @@ html, body {
   padding: 1px;
   margin: 1px;
   cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0);
 }
 
 .MOVE:hover:not(.selected) {
@@ -101,6 +108,7 @@ html, body {
   padding: 1px;
   margin: 1px;
   cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0);
 }
 
 .UPDATE:hover:not(.selected) {
@@ -109,10 +117,11 @@ html, body {
 }
 
 .DELETE {
-  background-color: rgba(232, 118, 118, 0.7);
+  background-color: rgba(222, 166, 166, 0.7);
   text-shadow: none;
   padding: 1px;
   margin: 1px;
+  border: 1px solid rgba(255, 255, 255, 0);
 }
 
 .codebox {
@@ -120,14 +129,15 @@ html, body {
   padding-left: 0;
 }
 
-pre {
-  padding: 0;
+.pre {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /* selected element style */
 
 .selected {
-  border: 2px solid black;
+  border: 1px solid black;
   z-index: 100;
   position:relative;
   padding: 2px;
@@ -169,7 +179,7 @@ pre {
 }
 
 .skill-unit .bar .progress { background: #24ff09; }
-.skill-unit .bar .progress span { color: #24ff09; background: #24ff09 );
+.skill-unit .bar .progress span { color: #24ff09; background: #24ff09; }
 
 #diffsViewer
 {
